<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>4.0.6</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>io.cdc</groupId>
	<artifactId>stream</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>ChangeEvent</name>
	<description>Demo project for Spring Boot</description>
	<url/>
	<licenses>
		<license/>
	</licenses>
	<developers>
		<developer/>
	</developers>
	<scm>
		<connection/>
		<developerConnection/>
		<tag/>
		<url/>
	</scm>
	<properties>
		<java.version>21</java.version>
		<debz.version>2.5.2.Final</debz.version>
		<!--
			Pinned to the version Debezium 2.5.2 declares (version.kafka in
			debezium-build-parent). Spring Boot 4 manages Kafka to 4.1.x, and
			connect-json 4.1's JsonConverter calls JsonNode.properties(), added in
			Jackson 2.15. The debezium-yugabyte uber-jar bundles an unrelocated
			jackson-databind 2.13.5 that wins classpath order over the 2.21 Maven
			resolves, so that call dies with NoSuchMethodError. Staying on 3.6.1
			avoids the call and keeps Debezium on the Kafka it was built against.
			Revisit when moving to a Debezium build aligned with Kafka 4.x.
		-->
		<kafka.version>3.6.1</kafka.version>
	</properties>
	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-jdbc</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>

		<dependency>
			<groupId>io.debezium</groupId>
			<artifactId>debezium-embedded</artifactId>
			<version>${debz.version}</version>
		</dependency>

		<dependency>
			<groupId>io.debezium</groupId>
			<artifactId>debezium-api</artifactId>
			<version>${debz.version}</version>
		</dependency>

		<dependency>
			<groupId>io.debezium</groupId>
			<artifactId>debezium-storage-jdbc</artifactId>
			<version>${debz.version}</version>
		</dependency>

		<dependency>
			<groupId>io.debezium</groupId>
			<artifactId>debezium-yugabyte</artifactId>
			<version>${debz.version}</version>
		</dependency>

		<dependency>
			<groupId>com.fasterxml.jackson.datatype</groupId>
			<artifactId>jackson-datatype-jsr310</artifactId>
		</dependency>

<!--		<dependency>-->
<!--			<groupId>org.springframework.retry</groupId>-->
<!--			<artifactId>spring-retry</artifactId>-->
<!--		</dependency>-->

<!--		<dependency>-->
<!--			<groupId>com.yugabyte.cdc</groupId>-->
<!--			<artifactId>debezium-connector-yugabytedb</artifactId>-->
<!--			<version>1.0</version>-->
<!--			<scope>system</scope>-->
<!--			<systemPath>${project.basedir}/lib/debezium-connector-yugabytedb-dz.2.5.2.yb.2024.2.3-jar-with-dependencies.jar</systemPath>-->
<!--		</dependency>-->

		<dependency>
			<groupId>org.postgresql</groupId>
			<artifactId>postgresql</artifactId>
			<scope>runtime</scope>
		</dependency>

		<dependency>
			<groupId>com.yugabyte</groupId>
			<artifactId>jdbc-yugabytedb</artifactId>
			<version>42.7.3-yb-4</version>
		</dependency>

		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-configuration-processor</artifactId>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<annotationProcessorPaths>
						<path>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
						</path>
					</annotationProcessorPaths>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<configuration>
					<excludes>
						<exclude>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
						</exclude>
					</excludes>
				</configuration>
			</plugin>
			<plugin>
				<groupId>io.spring.javaformat</groupId>
				<artifactId>spring-javaformat-maven-plugin</artifactId>
				<version>0.0.43</version>
			</plugin>
		</plugins>
	</build>

</project>
